# ircd

./: Cargo.toml  LICENSE  README.md  config.toml.example
src/: config.rs  lib.rs  main.rs  structs.rs
