[package]
name = "ircd"
version = "0.1.0"
authors = ["John Maguire <contact@johnmaguire.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"

[[bin]]
name = "ircd"

[lib]
name = "ircd"
